--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="author" content="Pep del Baño" />
+    <meta name="description" content="Developer Portfolio" />
+    <link rel="icon" href="img/favicon.ico" />
+    <meta name="keywords" content="Full Stack Web Developer" />
 
-    <title>Portfolio</title>
+    <title>Pep del Baño | Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -36,6 +38,7 @@
     >
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Pep del Baño</span>
+
         <span class="d-none d-lg-block">
           <img
             class="img-fluid img-profile rounded-circle mx-auto mb-2"
@@ -61,9 +64,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience"
-              >Experience</a
-            >
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education"
@@ -78,9 +79,9 @@
               >Interests</a
             >
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </nav>
@@ -103,20 +104,20 @@
             I am an enthusiast web developer
           </p>
           <div class="social-icons">
-            <a href="https://www.linkedin.com/in/josepdelbano/">
+            <a target="_blank" href="https://www.linkedin.com/in/josepdelbano/">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="https://github.com/pepdbm7">
+            <a target="_blank" href="https://github.com/pepdbm7">
               <i class="fab fa-github"></i>
             </a>
-            <a href="https://twitter.com/pepdbm89">
+            <a target="_blank" href="https://twitter.com/pepdbm89">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://www.facebook.com/pep.delbano">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="https://www.instagram.com/pdbm77">
+            <a target="_blank" href="https://www.instagram.com/pdbm77">
               <i class="fab fa-instagram"></i>
+            </a>
+            <a target="_blank" href="https://www.facebook.com/pep.delbano">
+              <i class="fab fa-facebook-f"></i>
             </a>
           </div>
         </div>
@@ -126,86 +127,107 @@
 
       <section
         class="resume-section p-3 p-lg-5 d-flex justify-content-center"
-        id="experience"
+        id="projects"
       >
         <div class="w-100">
-          <h2 class="mb-5">Experience</h2>
+          <h2 class="mb-5">Projects</h2>
+          <div class="card my-3 shadow p-3 mb-5">
+            <div class="project-img-container">
+              <img
+                class="card-img-top photo"
+                src="./img/planbe_screenshot.png"
+                alt="planbe screenshot"
+              />
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Planbe</h3>
+              <h5>E-commerce with MERN Stack</h5>
+              <p class="separation-title-card"></p>
+              <ul class="pl-0 mt-4 list-unstyled">
+                <div class="row text-left">
+                  <div class="col-lg-6 col-12">
+                    <li class="mt-1">
+                      <i class="fa fa-star"></i> Register and login of username
+                      and password
+                    </li>
+                    <li class="my-1">
+                      <i class="fa fa-star"></i> Receive customized emails after
+                      registration, finishing an order and updating user profile
+                    </li>
+                    <li>
+                      <i class="fa fa-star"></i> Add products and remove them
+                      from the Cart
+                    </li>
+                  </div>
+                  <div class="col-lg-6 col-12">
+                    <li class="my-1">
+                      <i class="fa fa-star"></i> Simulated payment form
+                    </li>
+                    <li class="my-1">
+                      <i class="fa fa-star"></i> View of the orders history
+                    </li>
+                    <li>
+                      <i class="fa fa-star"></i> Editable all user's profile
+                      fields
+                    </li>
+                  </div>
+                </div>
+              </ul>
+              <p class="card-text">
+                <a
+                  href="http://planbe-freshbites.surge.sh/#/"
+                  target="_blank"
+                  class="mr-3"
+                  ><i class="fas fa-laptop-code"></i> Try demo</a
+                >
+                <a
+                  href="https://github.com/pepdbm7/Bootcamp-Final-Project"
+                  target="_blank"
+                  ><i class="fab fa-github"></i> Go To repository</a
+                >
+              </p>
+            </div>
+          </div>
 
-          <div
+          <!-- <div
             class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="resume-content">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>
-                Bring to the table win-win survival strategies to ensure
-                proactive domination. At the end of the day, going forward, a
-                new normal that has evolved from generation X is on the runway
-                heading towards a streamlined cloud solution. User generated
-                content in real-time will have multiple touchpoints for
-                offshoring.
-              </p>
+              <h3 class="mb-0">planbe</h3>
+              <div class="subheading mb-3">E-commerce with MERN Stack</div>
+              <p></p>
+              <ul class="pl-0 mt-4">
+                <div class="row text-left">
+                  <div class="col-lg-6 col-12">
+                    <li class="mt-1">
+                      <i class="fa fa-star"></i> Register and login of username
+                      and password
+                    </li>
+                    <li class="my-1">
+                      <i class="fa fa-star"></i> Receive customized emails after
+                      registration, finishing an order and updating user profile
+                    </li>
+                    <li>
+                      <i class="fa fa-star"></i> Add products and remove them
+                      from the Cart
+                    </li>
+                  </div>
+                  <div class="col-lg-6 col-12">
+                    <li class="my-1">
+                      <i class="fa fa-star"></i> Simulated payment form
+                    </li>
+                    <li class="my-1">
+                      <i class="fa fa-star"></i> View of the orders history
+                    </li>
+                    <li>
+                      <i class="fa fa-star"></i> Editable all user's profile
+                      fields
+                    </li>
+                  </div>
+                </div>
+              </ul>
             </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
-            </div>
-          </div>
-
-          <div
-            class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
-          >
-            <div class="resume-content">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>
-                Capitalize on low hanging fruit to identify a ballpark value
-                added activity to beta test. Override the digital divide with
-                additional clickthroughs from DevOps. Nanotechnology immersion
-                along the information highway will close the loop on focusing
-                solely on the bottom line.
-              </p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
-            </div>
-          </div>
-
-          <div
-            class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
-          >
-            <div class="resume-content">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>
-                Podcasting operational change management inside of workflows to
-                establish a framework. Taking seamless key performance
-                indicators offline to maximise the long tail. Keeping your eye
-                on the ball while performing a deep dive on the start-up
-                mentality to derive convergence on cross-platform integration.
-              </p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
-
-          <div
-            class="resume-item d-flex flex-column flex-md-row justify-content-between"
-          >
-            <div class="resume-content">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>
-                Collaboratively administrate empowered markets via plug-and-play
-                networks. Dynamically procrastinate B2C users after installed
-                base benefits. Dramatically visualize customer directed
-                convergence without revolutionary ROI.
-              </p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
-            </div>
-          </div>
+          </div> -->
         </div>
       </section>
 
@@ -222,26 +244,17 @@
             class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="resume-content">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">Skylab Coders Academy</h3>
+              <div class="subheading mb-3">
+                Bootcamp of Javascript Full Stack
+              </div>
+              <div>
+                Intensive programming course of almost 3 months focused on the
+                technologies: React.JS, Node.JS, Express, MongoDB, Mongoose
+              </div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
-            </div>
-          </div>
-
-          <div
-            class="resume-item d-flex flex-column flex-md-row justify-content-between"
-          >
-            <div class="resume-content">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">September 2018 - December 2018</span>
             </div>
           </div>
         </div>
@@ -257,7 +270,7 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline dev-icons">
+          <!-- <ul class="list-inline dev-icons">
             <li class="list-inline-item">
               <i class="fab fa-html5"></i>
             </li>
@@ -314,7 +327,7 @@
               <i class="fa-li fa fa-check"></i>
               Agile Development &amp; Scrum
             </li>
-          </ul>
+          </ul> -->
         </div>
       </section>
 
@@ -328,20 +341,23 @@
           <h2 class="mb-5">Interests</h2>
           <p>
             Apart from being a web developer, I enjoy most of my time being
-            outdoors. In the winter, I am an avid skier and novice ice climber.
-            During the warmer months here in Colorado, I enjoy mountain biking,
-            free climbing, and kayaking.
+            outdoors in the nature, traveling, playing basketball, padel,
+            football etc. with other people. I like gardening and have lots of
+            plants at home too. I love traveling and knowing new places, and my
+            dream is to have a remote job one day to reconcile work with travel.
+            I like learning languages and I actually understand many of them
+            (French, Italian, Portuguese, German, Dutch, English, Spanish, and
+            nowadays learning Estonian).
           </p>
           <p class="mb-0">
-            When forced indoors, I follow a number of sci-fi and fantasy genre
-            movies and television shows, I am an aspiring chef, and I spend a
-            large amount of my free time exploring the latest technology
-            advancements in the front-end web development world.
+            When forced indoors, I spend a large amount of my free time
+            exploring the latest technology advancements in the web development
+            world or doing personal projects to keep updated.
           </p>
         </div>
       </section>
 
-      <hr class="m-0" />
+      <!-- <hr class="m-0" />
 
       <section
         class="resume-section p-3 p-lg-5 d-flex align-items-center"
@@ -383,7 +399,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </div>
 
     <!-- Bootstrap core JavaScript -->
