added technologies, second project and download cv

--- a/index.html
+++ b/index.html
@@ -101,9 +101,14 @@
             <a href="mailto:pepdbm7@gmail.com">pepdbm7@gmail.com</a>
           </div>
           <p class="lead mb-5">
-            I am an enthusiast web developer
+            I am an enthusiastic of the technology, enjoy learning and all the
+            possibilities you have with coding. I want to keep improving as a
+            Full Stack Developer in projects that help people. I am also a very
+            sportive extrovert guy who tries to travel and know people wherever
+            I go.
           </p>
           <div class="social-icons">
+              <p class="lead mb-5">Find me in Social Media: </p>
             <a target="_blank" href="https://www.linkedin.com/in/josepdelbano/">
               <i class="fab fa-linkedin-in"></i>
             </a>
@@ -119,6 +124,17 @@
             <a target="_blank" href="https://www.facebook.com/pep.delbano">
               <i class="fab fa-facebook-f"></i>
             </a>
+          </div>
+
+          <div>
+            <p class="lead my-5">
+              Download my CV now:
+              <a
+                href="docs/cv_2019_english.pdf"
+                download="PepDevCV"
+                ><i class="fas fa-file-download mx-2"></i></i
+              ></a>
+            </p>
           </div>
         </div>
       </section>
@@ -141,33 +157,33 @@
             </div>
             <div class="card-body">
               <h3 class="card-title">Planbe</h3>
-              <h5>E-commerce with MERN Stack</h5>
+              <h5 class="card-subtitle">E-commerce with MERN Stack</h5>
               <p class="separation-title-card"></p>
               <ul class="pl-0 mt-4 list-unstyled">
                 <div class="row text-left">
                   <div class="col-lg-6 col-12">
                     <li class="mt-1">
-                      <i class="fa fa-star"></i> Register and login of username
+                      <i class="fa fa-code"></i> Register and login of username
                       and password
                     </li>
                     <li class="my-1">
-                      <i class="fa fa-star"></i> Receive customized emails after
+                      <i class="fa fa-code"></i> Receive customized emails after
                       registration, finishing an order and updating user profile
                     </li>
                     <li>
-                      <i class="fa fa-star"></i> Add products and remove them
+                      <i class="fa fa-code"></i> Add products and remove them
                       from the Cart
                     </li>
                   </div>
                   <div class="col-lg-6 col-12">
                     <li class="my-1">
-                      <i class="fa fa-star"></i> Simulated payment form
+                      <i class="fa fa-code"></i> Simulated payment form
                     </li>
                     <li class="my-1">
-                      <i class="fa fa-star"></i> View of the orders history
+                      <i class="fa fa-code"></i> View of the orders history
                     </li>
                     <li>
-                      <i class="fa fa-star"></i> Editable all user's profile
+                      <i class="fa fa-code"></i> Editable all user's profile
                       fields
                     </li>
                   </div>
@@ -189,45 +205,56 @@
             </div>
           </div>
 
-          <!-- <div
-            class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
-          >
-            <div class="resume-content">
-              <h3 class="mb-0">planbe</h3>
-              <div class="subheading mb-3">E-commerce with MERN Stack</div>
-              <p></p>
-              <ul class="pl-0 mt-4">
+          <div class="card my-3 shadow p-3 mb-5">
+            <div class="project-img-container">
+              <img
+                class="card-img-top photo"
+                src="./img/meetup_screenshot.PNG"
+                alt="planbe screenshot"
+              />
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Meetup</h3>
+              <h5 class="card-subtitle">Social Network with MEVN Stack</h5>
+              <p class="separation-title-card"></p>
+              <ul class="pl-0 mt-4 list-unstyled">
                 <div class="row text-left">
                   <div class="col-lg-6 col-12">
                     <li class="mt-1">
-                      <i class="fa fa-star"></i> Register and login of username
+                      <i class="fa fa-code"></i> Register and login of username
                       and password
                     </li>
+                    <li><i class="fa fa-code"></i> Create new Events</li>
                     <li class="my-1">
-                      <i class="fa fa-star"></i> Receive customized emails after
-                      registration, finishing an order and updating user profile
-                    </li>
-                    <li>
-                      <i class="fa fa-star"></i> Add products and remove them
-                      from the Cart
+                      <i class="fa fa-code"></i> Confirm or cancel assistance
                     </li>
                   </div>
                   <div class="col-lg-6 col-12">
-                    <li class="my-1">
-                      <i class="fa fa-star"></i> Simulated payment form
-                    </li>
-                    <li class="my-1">
-                      <i class="fa fa-star"></i> View of the orders history
-                    </li>
                     <li>
-                      <i class="fa fa-star"></i> Editable all user's profile
-                      fields
+                      <i class="fa fa-code"></i> Create comments on events
                     </li>
+                    <li class="my-1">
+                      <i class="fa fa-code"></i> Filter events by assistance
+                    </li>
+                    <li><i class="fa fa-code"></i> See user profile</li>
                   </div>
                 </div>
               </ul>
+              <p class="card-text">
+                <a
+                  href="https://meetup-mevn-pep.herokuapp.com"
+                  target="_blank"
+                  class="mr-3"
+                  ><i class="fas fa-laptop-code"></i> Try demo</a
+                >
+                <a
+                  href="https://github.com/pepdbm7/Meetup-with-Vue"
+                  target="_blank"
+                  ><i class="fab fa-github"></i> Go To repository</a
+                >
+              </p>
             </div>
-          </div> -->
+          </div>
         </div>
       </section>
 
@@ -270,42 +297,45 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <!-- <ul class="list-inline dev-icons">
+          <ul class="list-inline dev-icons">
             <li class="list-inline-item">
-              <i class="fab fa-html5"></i>
+              <img src="./img/html_css.png" />
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-css3-alt"></i>
+              <img src="./img/JavaScript-logo.jpg" />
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-js-square"></i>
+              <img src="./img/react.png" />
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-angular"></i>
+              <img src="./img/redux.png" />
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-react"></i>
+              <img src="./img/graphql.png" />
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-node-js"></i>
+              <img src="./img/vue.png" />
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-sass"></i>
+              <img src="./img/vuex.png" />
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-less"></i>
+              <img src="./img/sass.svg" />
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-wordpress"></i>
+              <img src="./img/bootstrap.png" />
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-gulp"></i>
+              <img src="./img/node.png" />
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-grunt"></i>
+              <img src="./img/mongodb.png" />
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-npm"></i>
+              <img src="./img/firebase.png" />
+            </li>
+            <li class="list-inline-item">
+              <img src="./img/webpack.png" />
             </li>
           </ul>
 
@@ -327,7 +357,7 @@
               <i class="fa-li fa fa-check"></i>
               Agile Development &amp; Scrum
             </li>
-          </ul> -->
+          </ul>
         </div>
       </section>
 
