--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" />
 
     <!-- Custom styles for this template -->
-    <link href="css/resume.min.css" rel="stylesheet" />
+    <link href="css/resume.css" rel="stylesheet" />
   </head>
 
   <body id="page-top">
@@ -440,6 +440,6 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/resume.min.js"></script>
+    <script src="js/resume.js"></script>
   </body>
 </html>
