added gnomefinder project

--- a/home.html
+++ b/home.html
@@ -154,6 +154,8 @@
       >
         <div class="w-100">
           <h2 class="mb-5">Projects</h2>
+          <!-- first project -->
+
           <div class="card my-3 shadow p-3 mb-5">
             <div class="project-img-container">
               <img
@@ -212,6 +214,8 @@
             </div>
           </div>
 
+          <!-- second project -->
+
           <div class="card my-3 shadow p-3 mb-5">
             <div class="project-img-container">
               <img
@@ -256,6 +260,62 @@
                 >
                 <a
                   href="https://github.com/pepdbm7/Meetup-with-Vue"
+                  target="_blank"
+                  ><i class="fab fa-github"></i> Go To repository</a
+                >
+              </p>
+            </div>
+          </div>
+
+          <!-- third project -->
+
+          <div class="card my-3 shadow p-3 mb-5">
+            <div class="project-img-container">
+              <img
+                class="card-img-top photo"
+                src="./img/gnomefinder_screenshot.png"
+                alt="planbe screenshot"
+              />
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Gnome finder</h3>
+              <h5 class="card-subtitle">React and Redux app</h5>
+              <p class="separation-title-card"></p>
+              <ul class="pl-0 mt-4 list-unstyled">
+                <div class="row text-left">
+                  <div class="col-lg-6 col-12">
+                    <li class="mt-1">
+                      <i class="fa fa-code"></i> Restringed access with a username
+                    </li>
+                    <li class="my-1">
+                      <i class="fa fa-code"></i> Keeps active using Session storage
+                    </li>
+                    <li>
+                      <i class="fa fa-code"></i> Shows the first 20 gnomes for long lists
+                    </li>
+                  </div>
+                  <div class="col-lg-6 col-12">
+                    <li class="my-1">
+                      <i class="fa fa-code"></i> Fetching data with axios
+                    </li>
+                    <li class="my-1">
+                      <i class="fa fa-code"></i> Apply up to 4 filters simultaneously
+                    </li>
+                    <li>
+                      <i class="fa fa-code"></i> Responsive and smooth style
+                    </li>
+                  </div>
+                </div>
+              </ul>
+              <p class="card-text">
+                <a
+                  href="https://thirsty-neumann-4260ef.netlify.com/"
+                  target="_blank"
+                  class="mr-3"
+                  ><i class="fas fa-laptop-code"></i> Try demo</a
+                >
+                <a
+                  href="https://github.com/pepdbm7/React-Redux-Finder"
                   target="_blank"
                   ><i class="fab fa-github"></i> Go To repository</a
                 >
