--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
       id="sideNav"
     >
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Pep del Baño</span>
+        <span class="d-block d-lg-none signature">Pep del Baño</span>
 
         <span class="d-none d-lg-block">
           <img
@@ -76,7 +76,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll active" href="#about">About</a>
+            <a class="nav-link js-scroll" href="#about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#projects">Projects</a>
@@ -90,16 +90,13 @@
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#interests">Interests</a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-          </li> -->
         </ul>
       </div>
     </nav>
 
     <div class="container-fluid p-0">
       <section
-        class="resume-section p-3 p-lg-5 d-flex align-items-center"
+        class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center"
         id="about"
       >
         <div class="w-100">
@@ -154,14 +151,20 @@
 
       <hr class="m-0" />
 
+      <section class="parallax parallax-projects">
+        <div
+          class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center parallax-container"
+          id="projects"
+        >
+          <h2>Projects</h2>
+        </div>
+      </section>
+
       <section
-        class="resume-section p-3 p-lg-5 d-flex justify-content-center"
-        id="projects"
+        class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center"
       >
         <div class="w-100">
-          <h2 class="mb-5">Projects</h2>
           <!-- first project -->
-
           <div class="card my-3 shadow p-3 mb-5">
             <div class="project-img-container">
               <img
@@ -337,13 +340,19 @@
 
       <hr class="m-0" />
 
+      <section class="parallax parallax-education">
+        <div
+          class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center parallax-container"
+          id="education"
+        >
+          <h2>Education</h2>
+        </div>
+      </section>
+
       <section
-        class="resume-section p-3 p-lg-5 d-flex align-items-center"
-        id="education"
+        class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center"
       >
         <div class="w-100">
-          <h2 class="mb-5">Education</h2>
-
           <div
             class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
           >
@@ -366,13 +375,19 @@
 
       <hr class="m-0" />
 
+      <section class="parallax parallax-skills">
+        <div
+          class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center parallax-container"
+          id="skills"
+        >
+          <h2>Skills</h2>
+        </div>
+      </section>
+
       <section
-        class="resume-section p-3 p-lg-5 d-flex align-items-center"
-        id="skills"
+        class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center"
       >
         <div class="w-100">
-          <h2 class="mb-5">Skills</h2>
-
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
@@ -440,12 +455,18 @@
 
       <hr class="m-0" />
 
+      <section class="parallax parallax-interests">
+        <div
+          class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center parallax-container"
+          id="interests"
+        >
+          <h2>Interests</h2>
+        </div>
+      </section>
       <section
-        class="resume-section p-3 p-lg-5 d-flex align-items-center"
-        id="interests"
+        class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center"
       >
         <div class="w-100">
-          <h2 class="mb-5">Interests</h2>
           <p>
             Apart from being a web developer, I enjoy most of my time being
             outdoors in the nature, traveling, playing basketball, padel,
