--- a/home.html
+++ b/home.html
@@ -96,13 +96,13 @@
 
     <div class="container-fluid p-0">
       <section
-        class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center"
+        class="resume-section p-3 pb-5 p-lg-5 d-flex align-items-center justify-content-center about"
         id="about"
       >
         <div class="w-100">
-          <h1 class="mb-0 primary">
-            Pep
-            <span class="secondary">del Baño</span>
+          <h1 class="mb-0">
+            <span class="name-title">Pep</span>
+            <span class="lastname-title">del Baño</span>
           </h1>
           <div class="subheading mb-5">
             Ripollet, 08291, Barcelona, Spain
@@ -153,7 +153,7 @@
 
       <section class="parallax parallax-projects">
         <div
-          class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center parallax-container"
+          class="resume-section p-3 pb-5 p-lg-5 d-flex align-items-center justify-content-center parallax-container"
           id="projects"
         >
           <h2>Projects</h2>
@@ -161,7 +161,7 @@
       </section>
 
       <section
-        class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center"
+        class="resume-section p-3 pb-5 p-lg-5 d-flex align-items-center justify-content-center"
       >
         <div class="w-100">
           <!-- first project -->
@@ -342,7 +342,7 @@
 
       <section class="parallax parallax-education">
         <div
-          class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center parallax-container"
+          class="resume-section p-3 pb-5 p-lg-5 d-flex align-items-center justify-content-center parallax-container"
           id="education"
         >
           <h2>Education</h2>
@@ -350,7 +350,7 @@
       </section>
 
       <section
-        class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center"
+        class="resume-section p-3 pb-5 p-lg-5 d-flex align-items-center justify-content-center"
       >
         <div class="w-100">
           <div
@@ -377,7 +377,7 @@
 
       <section class="parallax parallax-skills">
         <div
-          class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center parallax-container"
+          class="resume-section p-3 pb-5 p-lg-5 d-flex align-items-center justify-content-center parallax-container"
           id="skills"
         >
           <h2>Skills</h2>
@@ -385,7 +385,7 @@
       </section>
 
       <section
-        class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center"
+        class="resume-section p-3 pb-5 p-lg-5 d-flex align-items-center justify-content-center"
       >
         <div class="w-100">
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
@@ -457,14 +457,14 @@
 
       <section class="parallax parallax-interests">
         <div
-          class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center parallax-container"
+          class="resume-section p-3 pb-5 p-lg-5 d-flex align-items-center justify-content-center parallax-container"
           id="interests"
         >
           <h2>Interests</h2>
         </div>
       </section>
       <section
-        class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center"
+        class="resume-section p-3 pb-5 p-lg-5 d-flex align-items-center justify-content-center"
       >
         <div class="w-100">
           <p>
@@ -488,7 +488,7 @@
       <!-- <hr class="m-0" />
 
       <section
-        class="resume-section p-3 p-lg-5 d-flex align-items-center"
+        class="resume-section p-3 pb-5 p-lg-5 d-flex align-items-center"
         id="awards"
       >
         <div class="w-100">
