--- a/home.html
+++ b/home.html
@@ -96,7 +96,7 @@
 
     <div class="container-fluid p-0">
       <section
-        class="resume-section p-3 pb-5 p-lg-5 d-flex align-items-center justify-content-center about"
+        class="resume-section pb-5 p-lg-5 d-flex align-items-center justify-content-center about"
         id="about"
       >
         <div class="w-100">
@@ -161,7 +161,7 @@
       </section>
 
       <section
-        class="resume-section p-3 pb-5 p-lg-5 d-flex align-items-center justify-content-center"
+        class="resume-section pb-5 p-lg-5 d-flex align-items-center justify-content-center"
       >
         <div class="w-100">
           <!-- first project -->
@@ -350,7 +350,7 @@
       </section>
 
       <section
-        class="resume-section p-3 pb-5 p-lg-5 d-flex align-items-center justify-content-center"
+        class="resume-section pb-5 p-lg-5 d-flex align-items-center justify-content-center"
       >
         <div class="w-100">
           <div
@@ -385,7 +385,7 @@
       </section>
 
       <section
-        class="resume-section p-3 pb-5 p-lg-5 d-flex align-items-center justify-content-center"
+        class="resume-section pb-5 p-lg-5 d-flex align-items-center justify-content-center"
       >
         <div class="w-100">
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
@@ -464,7 +464,7 @@
         </div>
       </section>
       <section
-        class="resume-section p-3 pb-5 p-lg-5 d-flex align-items-center justify-content-center"
+        class="resume-section pb-5 p-lg-5 d-flex align-items-center justify-content-center"
       >
         <div class="w-100">
           <p>
@@ -488,7 +488,7 @@
       <!-- <hr class="m-0" />
 
       <section
-        class="resume-section p-3 pb-5 p-lg-5 d-flex align-items-center"
+        class="resume-section pb-5 p-lg-5 d-flex align-items-center"
         id="awards"
       >
         <div class="w-100">
