added skills and pinterhooks

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         class="resume-section pb-5 p-lg-5 d-flex align-items-center justify-content-center about"
         id="about"
       >
-        <div class="w-100">
+        <div class="w-100 text-center">
           <h1 class="mb-0">
             <span class="name-title">Pep</span>
             <span class="lastname-title">del Baño</span>
@@ -164,6 +164,7 @@
         class="resume-section pb-5 p-lg-5 d-flex align-items-center justify-content-center"
       >
         <div class="w-100">
+          <h3 class="secondary stack">Full Stack</h3>
           <!-- first project -->
           <div class="card my-3 shadow p-3 mb-5">
             <div class="project-img-container">
@@ -277,6 +278,7 @@
           </div>
 
           <!-- third project -->
+          <h3 class="secondary stack">Front End</h3>
 
           <div class="card my-3 shadow p-3 mb-5">
             <div class="project-img-container">
@@ -329,6 +331,53 @@
                 >
                 <a
                   href="https://github.com/pepdbm7/React-Redux-Finder"
+                  target="_blank"
+                  ><i class="fab fa-github"></i> Go To repository</a
+                >
+              </p>
+            </div>
+          </div>
+
+          <!-- fourth project -->
+
+          <div class="card my-3 shadow p-3 mb-5">
+            <div class="project-img-container">
+              <img
+                class="card-img-top photo"
+                src="./img/pinterhooks.PNG"
+                alt="pinterhooks"
+              />
+            </div>
+            <div class="card-body">
+              <h3 class="secondary">Pinterhooks</h3>
+              <h5 class="third">Front End React project</h5>
+              <p class="separation-title-card"></p>
+              <ul class="pl-0 mt-4 list-unstyled">
+                <div class="row text-left">
+                  <div class="col-lg-6 col-12">
+                    <li class="mt-1">
+                      <i class="fa fa-code"></i> High quality images searcher
+                    </li>
+                    <li><i class="fa fa-code"></i> Used React's Hooks</li>
+                    <li class="my-1">
+                      <i class="fa fa-code"></i> Responsive smooth design
+                    </li>
+                  </div>
+                  <div class="col-lg-6 col-12">
+                    <li><i class="fa fa-code"></i> Used Pixabay API</li>
+                    <li><i class="fa fa-code"></i> Includes pagination</li>
+                  </div>
+                </div>
+              </ul>
+              <p class="card-text">
+                <a
+                  href="https://pinterhooks.herokuapp.com"
+                  target="_blank"
+                  class="mr-3"
+                  ><i class="fas fa-laptop"></i> Try demo</a
+                >
+                <a
+                  href="https://github.com/pepdbm7/image-finder-hooks"
                   target="_blank"
                   ><i class="fab fa-github"></i> Go To repository</a
                 >
@@ -388,7 +437,9 @@
         class="resume-section pb-5 p-lg-5 d-flex align-items-center justify-content-center"
       >
         <div class="w-100">
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+          <div class="subheading mb-3">
+            <h3 class="stack">Programming Languages &amp; Tools</h3>
+          </div>
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
               <img src="./img/html_css.png" />
@@ -424,6 +475,12 @@
               <img src="./img/mongodb.png" />
             </li>
             <li class="list-inline-item">
+              <img src="./img/php.jpg" />
+            </li>
+            <li class="list-inline-item">
+              <img src="./img/mysql.jpg" />
+            </li>
+            <li class="list-inline-item">
               <img src="./img/firebase.png" />
             </li>
             <li class="list-inline-item">
@@ -431,7 +488,9 @@
             </li>
           </ul>
 
-          <div class="subheading mb-3">Workflow</div>
+          <div class="subheading mb-3">
+            <h3 class="stack">Workflow</h3>
+          </div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
